--- a/src/app/components/molecules/course/course-details-card/course-details-card.component.html
+++ b/src/app/components/molecules/course/course-details-card/course-details-card.component.html
@@ -1,14 +1,13 @@
 <mat-card class="detail-card">
   <mat-card-header>
-    <mat-card-title class="title">Detalhes do Curso</mat-card-title>
+    <mat-card-title class="title">{{ course.name }}</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <mat-list class="list">
       <mat-list-item class="list-item">
-        <span mat-line>Nome:</span>
-        <span mat-line>{{ course.name }}</span>
+        <span mat-line>Professor responsável:</span>
+        <span mat-line>{{ teacherName }}</span>
       </mat-list-item>
-
       <mat-list-item class="list-item">
         <span mat-line>Categoria:</span>
         <span mat-line>{{ course.category }}</span>
@@ -29,11 +28,16 @@
     </mat-list>
   </mat-card-content>
   <div *ngIf="!isEditing" class="action-buttons-card">
-    <button mat-raised-button color="primary" (click)="toggleEditing()">
+    <app-button mat-raised-button color="accent" (click)="toggleEditing()">
       Editar
-    </button>
-    <button mat-raised-button color="warn" (click)="deletecourse()">
+    </app-button>
+    <app-button
+      mat-raised-button
+      color="warn"
+      [redColor]="true"
+      (click)="deletecourse()"
+    >
       Desativar
-    </button>
+    </app-button>
   </div>
 </mat-card>
