--- a/src/app/components/organisms/student/student-list/student-list.component.html
+++ b/src/app/components/organisms/student/student-list/student-list.component.html
@@ -15,7 +15,7 @@
       ></app-itens-list>
     </ng-container>
     <ng-template #loading>
-      <p>Carregando alunos...</p>
+      <h2>Carregando alunos...</h2>
     </ng-template>
   </mat-card-content>
 </mat-card>
