--- a/src/app/components/organisms/teacher/teacher-list/teacher-list.component.html
+++ b/src/app/components/organisms/teacher/teacher-list/teacher-list.component.html
@@ -15,7 +15,7 @@
       ></app-itens-list>
     </ng-container>
     <ng-template #loading>
-      <p>Carregando professores...</p>
+      <h2>Carregando professores...</h2>
     </ng-template>
   </mat-card-content>
 </mat-card>
