--- a/src/app/pages/nao-encontrada/nao-encontrada.component.html
+++ b/src/app/pages/nao-encontrada/nao-encontrada.component.html
@@ -1,1 +1,20 @@
-<p>nao-encontrada works!</p>
+<section class="not-found-page">
+  <svg
+    width="200px"
+    height="200px"
+    viewBox="0 0 24 24"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <path
+      d="M11.9998 2.00002C6.4862 2.00002 2 6.48622 2 12C2 17.5138 6.4862 22 11.9998 22C17.5136 22 21.9998 17.5138 21.9998 12C21.9998 6.48622 17.5136 2.00002 11.9998 2.00002ZM12.9998 17V19H10.9998V17H12.9998ZM12.9998 7V15H10.9998V7H12.9998Z"
+      fill="#0197AF"
+    />
+  </svg>
+
+  <h2 class="mat-display-1 title">
+    Oh nããão, não encontrei o conteúdo que você estava procurando
+  </h2>
+
+  <app-button routerLink="/">Voltar para o menu incial</app-button>
+</section>
