--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,10 @@
 :root{
   --primary-color: #0197AF;
   --secondary-color: #4B227A;
+  --secondary2-color: #825fb8;
   --accent-color: #00EED0;
   --background-color: #02153D;
-  --site-color: #f5f5f5;
+  --site-color: #ededed;
+  --white-color: #fff;
   --text-color: #FFFFFF;
 }
