--- a/src/app/components/atoms/button/button.component.scss
+++ b/src/app/components/atoms/button/button.component.scss
@@ -1,19 +1,35 @@
 button.mat-raised-button {
   width: 100%;
-  margin-top: 16px;
   font-size: 16px;
-  background-color: var(--primary-color);
   color: #fff;
+  min-height: 36px;
+  min-width: 100px;
   &:hover{
     color: #f0f0f0;
-    background-color: var(--secondary-color);
+    background-color: var(--secondary2-color);
   }
 
 }
 button.mat-raised-button.red-button {
-  background-color: #e57373;
+  background-color: #d32f2f;
+
 }
 
 button.mat-raised-button.red-button:hover {
-  background-color: #d32f2f;
+  background-color: #e57373;
+}
+
+.loader {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-top: 4px solid var(--secondary-color);
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  margin: auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
