--- a/src/app/components/molecules/course/course-details-card/course-details-card.component.scss
+++ b/src/app/components/molecules/course/course-details-card/course-details-card.component.scss
@@ -1,6 +1,5 @@
 .detail-card {
-  width: 100%;
-  height: 100%;
+
   display: flex;
   flex-direction: column;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -43,8 +42,8 @@
     display: flex;
     justify-content: space-around;
     padding: 8px;
-    button {
-      min-width: 120px;
+    app-button {
+     width: 120px;
     }
   }
 }
