--- a/src/app/components/molecules/course/course-form/course-form.component.scss
+++ b/src/app/components/molecules/course/course-form/course-form.component.scss
@@ -7,8 +7,6 @@
 .course-card{
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
-  height: 100%;
-  padding: 10px;
 }
 
 .course-form {
@@ -26,22 +24,24 @@
   .form-group {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: center;
 
+    height: 60px;
     .input-label {
-      display: inline-block;
-      width: 120px;
+      text-align: center;
+      width: 85px;
       margin-right: 10px;
       font-weight: bold;
       color: #333;
+      padding: 5px;
     }
 
-    app-input {
-      flex: 1;
-      mat-form-field {
-        width: 100%;
-      }
-    }
+    app-input-form {
+      min-width: 200px;
+      width: 100%;
+     }
   }
 
 
