--- a/src/app/components/molecules/itens-list/itens-list.component.scss
+++ b/src/app/components/molecules/itens-list/itens-list.component.scss
@@ -1,22 +1,28 @@
-section {
+.itens-list {
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--white-color);
 }
 .list {
-  padding: 10px;
+  padding: 5px;
   overflow-y: auto;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-height: 70vh;
+  border-top: 4px solid #ccc;
+  border-bottom: 4px solid #ccc;
+  border-radius: 8px;
+  max-height: 75vh;
 }
 
 .list-item {
-  border-bottom: 1px solid #ccc;
-  border-top: 1px solid #ccc;
+  border-bottom: 2px solid #ccc;
+  border-top: 2px solid #ccc;
+  border-radius: 8px;
   display: flex;
   &:hover {
     background-color: #f0f0f0;
@@ -39,6 +45,7 @@ section {
 }
 .list mat-list-item{
   height: 130px;
+  margin-bottom: 10px;
   width: 100%;
 }
 .list-item span{
@@ -56,6 +63,8 @@ app-item-details{
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: border-color 0.3s ease;
   width: 40%;
+  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .ipt-search:focus {
