--- a/src/app/components/molecules/student/student-details-card/student-details-card.component.scss
+++ b/src/app/components/molecules/student/student-details-card/student-details-card.component.scss
@@ -8,13 +8,10 @@
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 8px;
-    color: #3f51b5;
+      color: var(--primary-color);
     text-align: center;
   }
-  mat-card-content{
-    overflow-y: auto;
-    max-height: 75vh;
-  }
+
   .list {
     padding: 0 16px;
 
@@ -32,6 +29,9 @@
       .mat-line {
         font-size: 16px;
         color: #555;
+      }
+      .label{
+        color: var(--secondary2-color)
       }
     }
 
