--- a/src/app/components/molecules/student/student-form/student-form.component.scss
+++ b/src/app/components/molecules/student/student-form/student-form.component.scss
@@ -24,22 +24,24 @@
   .form-group {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: center;
 
+    height: 60px;
     .input-label {
-      display: inline-block;
-      width: 120px;
+      text-align: center;
+      width: 85px;
       margin-right: 10px;
       font-weight: bold;
       color: #333;
+      padding: 5px;
     }
 
-    app-input {
-      flex: 1;
-      mat-form-field {
-        width: 100%;
-      }
-    }
+    app-input-form {
+      min-width: 200px;
+      width: 100%;
+     }
   }
 
 
