--- a/src/app/components/molecules/teacher/teacher-details-card/teacher-details-card.component.html
+++ b/src/app/components/molecules/teacher/teacher-details-card/teacher-details-card.component.html
@@ -1,53 +1,49 @@
 <mat-card class="detail-card">
   <mat-card-header>
-    <mat-card-title class="title">Detalhes do Professor</mat-card-title>
+    <mat-card-title class="title">{{ teacher.personData.name }}</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <mat-list class="list">
       <mat-list-item class="list-item">
-        <span mat-line>Nome:</span>
-        <span mat-line>{{ teacher.personData.name }}</span>
-      </mat-list-item>
-      <mat-list-item class="list-item">
-        <span mat-line>CPF/CNPJ:</span>
+        <span mat-line class="label">CPF/CNPJ:</span>
         <span mat-line>{{ teacher.cpfCnpj }}</span>
       </mat-list-item>
       <mat-list-item class="list-item">
-        <span mat-line>Data de Nascimento:</span>
+        <span mat-line class="label">Data de Nascimento:</span>
         <span mat-line>{{
           teacher.personData.birthDate | date: "dd/MM/yyyy"
         }}</span>
       </mat-list-item>
       <mat-list-item class="list-item">
-        <span mat-line>Email:</span>
+        <span mat-line class="label">Email:</span>
         <span mat-line>{{ teacher.personData.email }}</span>
       </mat-list-item>
       <mat-list-item class="list-item">
-        <span mat-line>Telefone:</span>
+        <span mat-line class="label">Telefone:</span>
         <span mat-line>{{ teacher.personData.phone }}</span>
       </mat-list-item>
       <mat-list-item class="list-item">
-        <span mat-line>Gênero:</span>
+        <span mat-line class="label">Gênero:</span>
         <span mat-line>{{ teacher.personData.gender }}</span>
       </mat-list-item>
       <mat-list-item class="list-item">
-        <span mat-line>Especialização:</span>
+        <span mat-line class="label">Especialização:</span>
         <span mat-line>{{ teacher.specialization }}</span>
       </mat-list-item>
       <mat-list-item class="list-item">
-        <span mat-line>Anos de experiência:</span>
+        <span mat-line class="label">Anos de experiência:</span>
         <span mat-line>{{ teacher.experienceYears }}</span>
       </mat-list-item>
       <mat-list-item class="list-item">
-        <span mat-line>Status:</span>
+        <span mat-line class="label">Status:</span>
         <span mat-line>{{ teacher.active ? "Ativo" : "Desativado" }}</span>
       </mat-list-item>
       <mat-list-item class="list-item">
-        <span mat-line>Data de cadastro:</span>
+        <span mat-line class="label">Data de cadastro:</span>
         <span mat-line>{{ teacher.createdAt | date: "dd/MM/yyyy" }}</span>
       </mat-list-item>
       <mat-list-item class="list-item">
-        <span mat-line>Curso:</span>
+        <span mat-line class="label">Curso:</span>
         <span mat-line>{{
           teacher.course ? teacher.course.name : "Sem curso matriculado"
         }}</span>
