--- a/src/app/components/molecules/teacher/teacher-form/teacher-form.component.html
+++ b/src/app/components/molecules/teacher/teacher-form/teacher-form.component.html
@@ -7,88 +7,78 @@
   <mat-card-content>
     <form [formGroup]="teacherForm" class="teacher-form">
       <div class="form-group">
-        <span class="input-label">Nome:</span>
-        <app-input
+        <app-input-form
           placeholder="Nome"
           [control]="getFormControl('name')"
-        ></app-input>
+        ></app-input-form>
       </div>
       <div class="form-group">
-        <span class="input-label">CPF/CNPJ:</span>
-        <app-input
+        <app-input-form
           placeholder="CPF/CNPJ"
           [control]="getFormControl('cpfCnpj')"
-        ></app-input>
+        ></app-input-form>
       </div>
       <div class="form-group">
-        <span class="input-label">Data de Nascimento:</span>
-        <app-input
+        <app-input-form
           placeholder="Data de Nascimento"
           [control]="getFormControl('birthDate')"
-        ></app-input>
+          [date]="true"
+        ></app-input-form>
       </div>
 
       <div class="form-group">
-        <span class="input-label">Email:</span>
-        <app-input
+        <app-input-form
           placeholder="Email"
           [control]="getFormControl('email')"
-        ></app-input>
+        ></app-input-form>
       </div>
 
       <div class="form-group">
-        <span class="input-label">Telefone:</span>
-        <app-input
+        <app-input-form
           placeholder="Telefone"
           [control]="getFormControl('phone')"
-        ></app-input>
+        ></app-input-form>
       </div>
-
       <div class="form-group">
-        <span class="input-label">Gênero:</span>
-        <app-input
-          placeholder="Gênero"
-          [control]="getFormControl('gender')"
-        ></app-input>
-      </div>
-
-      <div class="form-group">
-        <span class="input-label">Especialização:</span>
-        <app-input
+        <app-input-form
           placeholder="Especialização"
           [control]="getFormControl('specialization')"
-        ></app-input>
+        ></app-input-form>
       </div>
 
       <div class="form-group">
-        <span class="input-label">Anos de experiência:</span>
-        <app-input
+        <app-input-form
           placeholder="Anos de experiência"
           [control]="getFormControl('experienceYears')"
-        ></app-input>
+        ></app-input-form>
+      </div>
+      <div class="form-group">
+        <app-select [control]="getFormControl('gender')"></app-select>
       </div>
 
       <div class="form-group" *ngIf="!this.createTeacher">
-        <span class="input-label">Ativo:</span>
-        <app-input
-          placeholder="Ativo"
+        <app-radio
           [control]="getFormControl('active')"
-        ></app-input>
+          [options]="[
+            { value: true, label: 'Ativo' },
+            { value: false, label: 'Desativado' }
+          ]"
+        >
+        </app-radio>
       </div>
 
       <div class="form-group" *ngIf="!this.createTeacher">
-        <span class="input-label">Criado em:</span>
-        <app-input
+        <app-input-form
           placeholder="Criado em"
           [control]="getFormControl('createdAt')"
-          [disabled]="true"
-        ></app-input>
+          [date]="true"
+        ></app-input-form>
       </div>
 
       <div class="action-buttons">
-        <button mat-raised-button color="primary" (click)="save()">
+        <app-button mat-raised-button color="primary" (click)="save()">
           Salvar
-        </button>
+        </app-button>
       </div>
     </form>
   </mat-card-content>
