--- a/src/app/components/molecules/teacher/teacher-form/teacher-form.component.scss
+++ b/src/app/components/molecules/teacher/teacher-form/teacher-form.component.scss
@@ -7,38 +7,39 @@
 .teacher-card{
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
+  width: 100%;
 }
 
 .teacher-form {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  max-width: 900px;
   padding: 20px;
   background: #fff;
   flex-direction: column;
-  flex: 1;
   min-width: 300px;
   margin: 10px;
 
   .form-group {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: center;
 
+    height: 60px;
     .input-label {
-      display: inline-block;
-      width: 120px;
+      text-align: center;
+      width: 85px;
       margin-right: 10px;
       font-weight: bold;
       color: #333;
+      padding: 5px;
     }
 
-    app-input {
-      flex: 1;
-      mat-form-field {
-        width: 100%;
-      }
+    app-input-form {
+     min-width: 200px;
+     width: 100%;
     }
   }
 
