--- a/src/app/components/organisms/footer/footer.component.html
+++ b/src/app/components/organisms/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer>
-  <p>&copy; 2024 CourseEase</p>
-</footer>
+<mat-toolbar color="primary" class="footer">
+  <span>&copy; 2024 CourseEase</span>
+</mat-toolbar>
