--- a/src/app/components/organisms/footer/footer.component.scss
+++ b/src/app/components/organisms/footer/footer.component.scss
@@ -1,11 +1,13 @@
 
-footer {
-  background-color: var(--background-color);
-  color: var(--text-color);
+.footer {
+  background-color: var(--white-color);
+  color: black;
   text-align: center;
   padding: 1rem;
   width: 100%;
-  height: 40px;
-  border-top: 4px solid var(--primary-color);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: 45px;
+  span{
+    font-size: 13px;
+    width: 100%;
+  }
 }
