--- a/src/app/components/organisms/header/header.component.scss
+++ b/src/app/components/organisms/header/header.component.scss
@@ -1,25 +1,21 @@
 .header {
   display: flex;
-  border-bottom: 4px solid var(--primary-color);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   justify-content: space-between;
-}
-.title {
-  margin-left: 1rem;
-}
-header {
-  background-color: var(--background-color);
-  color: var(--text-color);
+  color: var(--white-color);
   padding: 1rem;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 56px;
+
+  max-width: 100%;
 }
+.title {
+  margin-left: 1rem;
+}
+
 .sidebar {
   color: var(--text-color);
-  padding: 1rem;
   display: flex;
   flex-grow: 1;
   justify-content: center;
@@ -36,35 +32,53 @@ nav ul {
 }
 
 nav li {
-  margin: 0 0.5rem;
+  margin: 0 0.2rem;
 }
 
 a {
   color: var(--text-color);
+  transition: background-color 0.3s ease, color 0.3s ease;
   text-decoration: none;
+  border-radius: 20px;
+  transition: color 0.3s ease;
+  padding: 0.5rem;
+  background-color: rgba(83, 56, 148, 0.1);
+  font-size: 1rem;
+   &:hover{
+    color: var(--white-color);
+    background-color: var(--secondary2-color);
+   }
 }
 
-a.active {
-  color: var(--accent-color);
-}
-button {
-  background-color: var(--primary-color);
-  width: 100px;
-  border-radius: 4px;
-  margin-right: 1rem;
-}
-button:hover {
-  background-color: var(--secondary-color);
-  width: 100px;
-  border-radius: 4px;
-}
+a.active{
+  background-color: var(--secondary2-color);
+ }
 
-.login-options {
-  display: flex;
-  gap: 1rem;
-  margin-right: 1rem;
+span {
+ font-size: 1rem;
 }
+@media (max-width: 728px) {
+  .header {
+    justify-content: flex-start;
+    align-items: flex-start;
+    @media (max-width: 460px){
+      overflow-x: auto;
+    }
 
-.login-options span {
-  cursor: pointer;
+    a{
+      padding: 2px;
+    }
+  }
+
+  .title {
+   display: none;
+   margin: 0;
+  }
+
+  .sidebar {
+    justify-content: flex-start;
+
+  }
+
+
 }
