--- a/src/app/components/organisms/login/login.component.html
+++ b/src/app/components/organisms/login/login.component.html
@@ -1,18 +1,16 @@
-<section>
-  <mat-card class="login-card">
-    <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <app-auth-form
-        [loading]="loading"
-        (onSubmit)="login($event)"
-      ></app-auth-form>
-    </mat-card-content>
-    <div class="links">
-      <a>Esqueci minha senha</a>
-      <span> | </span>
-      <a routerLink="/register">Não tem uma conta? Registre-se</a>
-    </div>
-  </mat-card>
-</section>
+<mat-card class="login-card" color="primary">
+  <mat-card-header>
+    <mat-card-title>Entre ou cadastre-se</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <app-auth-form
+      [loading]="loading"
+      (onSubmit)="login($event)"
+    ></app-auth-form>
+  </mat-card-content>
+  <div class="links">
+    <a>Esqueci minha senha</a>
+    <span> | </span>
+    <a routerLink="/register">Não tem uma conta? Registre-se</a>
+  </div>
+</mat-card>
