--- a/src/app/components/organisms/login/login.component.scss
+++ b/src/app/components/organisms/login/login.component.scss
@@ -1,18 +1,21 @@
 
+
 .login-card {
   width: 500px;
-  background-color: var(--primary-color);
-  color: var(--text-color);
+  background-color: var(--white-color);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  background-color: var(--background-color);
+.mat-card-header {
+  border-radius: 8px 8px 4px 4px;
+  background-color:var(--primary-color);
+  padding: 16px;
+  color: white;
 }
 
+.mat-card-content {
+  padding: 20px;
+}
 .links {
   margin-top: 16px;
   display: flex;
@@ -21,10 +24,18 @@ section {
 }
 
 .links a {
-  color: var(--text-color);
+  color: var(--background-color);
   text-decoration: none;
+  font-weight: bold;
+  font-style: italic;
+  span{
+    .separator {
+      color: #777; /* Cor do separador */
+    }
+  }
 }
 
 .links a:hover {
   text-decoration: underline;
+  color: var(--primary-color);
 }
