--- a/src/app/components/organisms/register/register.component.html
+++ b/src/app/components/organisms/register/register.component.html
@@ -1,13 +1,11 @@
-<section>
-  <mat-card class="register-card">
-    <mat-card-header>
-      <mat-card-title>Cadastro</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <app-auth-form
-        [loading]="loading"
-        (onSubmit)="register($event)"
-      ></app-auth-form>
-    </mat-card-content>
-  </mat-card>
-</section>
+<mat-card class="register-card" color="primary">
+  <mat-card-header>
+    <mat-card-title>Cadastre-se</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <app-auth-form
+      [loading]="loading"
+      (onSubmit)="register($event)"
+    ></app-auth-form>
+  </mat-card-content>
+</mat-card>
