--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -1,3 +1,20 @@
 <section class="register-page">
-  <app-register></app-register>
+  <h2 class="mat-display-1 title">
+    Bem-vindo ao
+    <span
+      >CourseEase<svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        width="24"
+        height="24"
+      >
+        <path
+          fill="red"
+          d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
+        /></svg
+    ></span>
+    <br />
+    Digite o usuário e senha pra gente começar!
+  </h2>
+  <app-register class="register"></app-register>
 </section>
