--- a/src/app/pages/register-page/register-page.component.scss
+++ b/src/app/pages/register-page/register-page.component.scss
@@ -1,13 +1,31 @@
 .register-page {
   display: flex;
-  justify-content: center;
+  color: black;
   align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: var(--background-color);
+  justify-content: center;
+  flex: 1;
+
 }
-
-
+.register{
+  height: 100%;
+  width: 800px;
+  display: flex;
+  align-items: center;
+}
+.title{
+  text-align: center;
+  height: 200px;
+  width: 500px;
+  font-size: 28px;
+  line-height: 32px;
+  padding: 10px;
+  color: black;
+  span{
+    color: var(--primary-color);
+    font-weight: bold;
+  }
+}
 :host{
+  display: flex;
   flex: 1;
 }
