style: ajustes no layout e update readme

--- a/src/app/components/molecules/student/student-form/student-form.component.html
+++ b/src/app/components/molecules/student/student-form/student-form.component.html
@@ -73,6 +73,9 @@
       </div>
 
       <div class="action-buttons">
+        <app-button mat-raised-button color="warn" (click)="cancel()">
+          Cancelar
+        </app-button>
         <app-button mat-raised-button color="primary" (click)="save()">
           Salvar
         </app-button>
