--- a/src/app/components/molecules/teacher/teacher-form/teacher-form.component.scss
+++ b/src/app/components/molecules/teacher/teacher-form/teacher-form.component.scss
@@ -46,7 +46,7 @@
 
   .action-buttons {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     width: 100%;
     margin-top: 20px;
 
