--- a/src/app/components/organisms/login/login.component.html
+++ b/src/app/components/organisms/login/login.component.html
@@ -10,7 +10,7 @@
   </mat-card-content>
   <div class="links">
     <a>Esqueci minha senha</a>
-    <span> | </span>
-    <a routerLink="/register">Não tem uma conta? Registre-se</a>
+    <span class="separator"> | </span>
+    <a routerLink="/register">Quero me cadastrar!</a>
   </div>
 </mat-card>
