--- a/src/app/components/organisms/student/student-details/student-details.component.html
+++ b/src/app/components/organisms/student/student-details/student-details.component.html
@@ -17,6 +17,7 @@
   <app-student-form
     [createStudent]="createStudent"
     *ngIf="isEditing || createStudent"
+    (isEditing)="updateIsEditing($event)"
     class="student-form-card"
     [student]="student"
     (isEditingEnd)="updateEndEditing($event)"
