--- a/src/app/components/organisms/teacher/teacher-details/teacher-details.component.html
+++ b/src/app/components/organisms/teacher/teacher-details/teacher-details.component.html
@@ -17,6 +17,7 @@
   <app-teacher-form
     [createTeacher]="createTeacher"
     *ngIf="isEditing || createTeacher"
+    (isEditing)="updateIsEditing($event)"
     class="teacher-form-card"
     [teacher]="teacher"
     (isEditingEnd)="updateEndEditing($event)"
