--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -17,7 +17,7 @@
     <br />
     para
     <span>você</span>
-    gerir sua plataforma de <span>cursos</span>
+    gerir sua plataforma de <span>cursos!</span>
   </h2>
   <app-login class="login"></app-login>
 </section>
