--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -14,7 +14,8 @@
         /></svg
     ></span>
     <br />
-    Digite o usuário e senha pra gente começar!
+    Digite o usuário e senha<br />
+    pra gente começar!
   </h2>
   <app-register class="register"></app-register>
 </section>
