--- a/src/app/components/molecules/course/course-form/course-form.component.scss
+++ b/src/app/components/molecules/course/course-form/course-form.component.scss
@@ -47,7 +47,7 @@
 
   .action-buttons {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     width: 100%;
     margin-top: 20px;
 
