--- a/src/app/components/organisms/login/login.component.scss
+++ b/src/app/components/organisms/login/login.component.scss
@@ -1,7 +1,7 @@
 
 
 .login-card {
-  width: 500px;
+  width: 100%;
   background-color: var(--white-color);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -30,7 +30,7 @@
   font-style: italic;
   span{
     .separator {
-      color: #777; /* Cor do separador */
+      color: #777;
     }
   }
 }
@@ -38,4 +38,12 @@
 .links a:hover {
   text-decoration: underline;
   color: var(--primary-color);
+}
+@media (max-width:728px) {
+  .links{
+    font-size: 0.8rem;
+  }
+  .separator{
+    display: none;
+  }
 }
