--- a/src/app/components/organisms/register/register.component.scss
+++ b/src/app/components/organisms/register/register.component.scss
@@ -1,7 +1,7 @@
 
 
 .register-card {
-  width: 500px;
+  width: 100%;
   background-color: var(--white-color);
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
