--- a/src/app/pages/register-page/register-page.component.scss
+++ b/src/app/pages/register-page/register-page.component.scss
@@ -3,19 +3,20 @@
   color: black;
   align-items: center;
   justify-content: center;
+  max-width: 100%;
   flex: 1;
 
 }
 .register{
   height: 100%;
-  width: 800px;
+  width: 500px;
+  max-width: 800px;
   display: flex;
   align-items: center;
 }
 .title{
   text-align: center;
-  height: 200px;
-  width: 500px;
+  height: 20%;
   font-size: 28px;
   line-height: 32px;
   padding: 10px;
@@ -28,4 +29,16 @@
 :host{
   display: flex;
   flex: 1;
+}
+@media (max-width:728px) {
+  .register-page{
+    flex-direction: column;
+  }
+  .register{
+    width: 80%;
+  }
+  .title{
+    font-size: 1.5rem;
+  }
+
 }
